<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:textSize="18dp"
                android:text="@string/hvacModeLabel" />

            <Spinner
                android:id="@+id/spinnerTmode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="5px"
                 android:textSize="18dp"
                android:prompt="@string/hvacModeLabel" >

                <!-- Preview: listitem=@android:layout/simple_spinner_item -->
            </Spinner>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                 android:textSize="18dp"
                android:layout_gravity="center_vertical"
                android:text="@string/fanModeLabel" />

            <Spinner
                android:id="@+id/spinnerFmode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                 android:textSize="18dp"
                android:layout_marginLeft="5px"
                android:prompt="@string/fanModeLabel" />
        </TableRow>

        <TableRow>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                     android:textSize="18dp"
                    android:text="@string/setTemperatureLabel" />

                <EditText
                    android:id="@+id/editTextTargetTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5px"
                    android:layout_marginRight="5px"
                     android:textSize="18dp"
                    android:layout_weight="1"
                    android:inputType="number" >
                </EditText>
            </LinearLayout>

            <Spinner
                android:id="@+id/spinnerHmode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="center_vertical"
                 android:textSize="18dp"
                android:layout_marginLeft="5px"
                android:prompt="@string/holdModeLabel" >

                <!-- Preview: listitem=@android:layout/simple_spinner_item -->
            </Spinner>
        </TableRow>
        <TableRow>
            <EditText
                    android:id="@+id/editTextThermometerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_column="1"
                    
                     android:textSize="18dp"
                    
                     >
                </EditText>
                <Button  android:id="@+id/buttonThermometerName"  android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_column="2"
                    android:text="@string/buttonThermoNameLabel"
                     android:textSize="18dp"  android:layout_marginLeft="5px"></Button>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textViewSendCommandMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:textSize="18dp"
        android:layout_column="1"
        android:text="msg" />

</LinearLayout>